examples/kju/positive/expression_evaluation_order/side_effect_on_left_side.kju
fun kju():Unit{
    var x:Int=0;
    fun f():Int{
        x+=1;
        return 0;
    };
    f()+x;
}