examples/kju/negative/typeChecker/return_in_int_function_without_value.kju
fun f():Int{
	return;
}

fun kju():Unit{
	f();
}